<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/form_new_offer"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_title"
                android:hint="@string/form_title_offer"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_desc"
                android:hint="@string/form_desc_offers"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Tipo de Renta"
                    android:gravity="center_vertical"/>
                <Spinner
                    android:id="@+id/spinner_type_offer"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:id="@+id/ford_desc_servicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_desc_form"
                android:textStyle="italic"
                android:text="@string/form_desc_service"/>
            <TextView
                android:id="@+id/ford_desc_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_desc_form"
                android:textStyle="italic"
                android:text="@string/form_desc_product"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_city"
                android:hint="@string/form_city_offer"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_assurance"
                android:hint="@string/form_assurance_text"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_email"
                android:inputType="textEmailAddress"
                android:hint="@string/form_email_text"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_edittext_from"
                android:id="@+id/editText_form_phone"
                android:inputType="phone"
                android:hint="@string/form_email_text"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Publica ahora"/>


        </LinearLayout>
        </ScrollView>

</LinearLayout>